--- a/scripts/README
+++ b/scripts/README
@@ -1,7 +1,6 @@
 ##Autostart AUV
 Step1:
     touch /var/run/auvd.pid
-    echo 29928 > /var/run/auvd.pid
 Step2:
     cp auvd /etc/init.d/
 step3:
@@ -16,8 +15,12 @@ Optional:
 
 ##Autostart Watchdog
 step1:
-    cp watch-auv.sh /etc/init.d/
+    touch /var/run/watchdogd.pid
 step2:
-    chmod +x /etc/init.d/watch-auv.sh
+    cp watchdogd /etc/init.d/
+step3:
+    chmod +x /etc/init.d/watchdogd
+    chmod +x /etc/init.d/watchdogd
 step3
-   chkconfig watch-auv.sh on
+    update-rc.d -f watchdogd defaults
+
